# diffwtf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  diffwtf-scaffold-spec.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  publish.yml
crates/diffwtf-core/: Cargo.toml  README.md
crates/diffwtf-core/benches/: diff.rs
crates/diffwtf-core/src/: intraline.rs  lcs.rs  lib.rs  myers.rs
crates/diffwtf-core/tests/: conformance.rs  properties.rs  sample_pair.rs
crates/diffwtf-core/tests/common/: mod.rs
crates/diffwtf-wasm/: Cargo.toml
docs/: scaffold-spec.md
docs/design-handoff/: Diff Checker.dc.html  OG Card.dc.html  Privacy.dc.html  README.md
fixtures/cases/: bom.left.txt  bom.right.txt  crlf.right.txt  identical.right.txt  large-perf.left.txt  large-perf.right.txt  long-prefix-suffix.left.txt  long-prefix-suffix.right.txt  modify-char.left.txt  modify-char.right.txt  modify-word.left.txt  modify-word.right.txt  pure-delete.left.txt  pure-insert.right.txt  sample-rust.left.txt  sample-rust.right.txt  unicode.left.txt  unicode.right.txt
fixtures/expected/: bom.char.json  bom.word.ops.json  both-empty.char.json  both-empty.char.ops.json  crlf.char.ops.json  crlf.word.json  identical.char.json  identical.word.ops.json  large-perf.char.json  large-perf.char.ops.json  large-perf.word.json  large-perf.word.ops.json  long-prefix-suffix.char.json  long-prefix-suffix.char.ops.json  long-prefix-suffix.word.json  long-prefix-suffix.word.ops.json  (+24 more)
reference/: refdiff.mjs
scripts/: bench-browser.mjs  bench-browser.results.txt  bench-cases.mjs  bench-dispatch-threshold.mjs  bench-dispatch-threshold.results.txt  bench-vs-js.mjs  bench-vs-js.results.txt  build-wasm.sh  check-bench-page.mjs  check-third-party.mjs  check-virtual.mjs  conformance-dispatch.mjs  conformance-web.mjs  gen-bench-page.mjs  gen-fixtures.mjs  gen-large-case.mjs  minify-js.sh  render-og.md  smoke-live.mjs  stamp-site.mjs
web/: 404.html  benchmarks.html  dev-smoke.html  index.html  privacy.html
(+15 files in other folders)
